tests/files/lexer_tests/should_fail/041.cmdr
// Illegal character in variable name (ascii 8)
myvar = 8;